atualizações da farmacinha

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -5,7 +5,5 @@
     "/site/js/jquery-easing/jquery.easing.js": "/site/js/jquery-easing/jquery.easing.js?id=a641af63b0070328c337175a82f4bf2b",
     "/site/js/bootstrap.bundle.js": "/site/js/bootstrap.bundle.js?id=959ccc751404393c3cdfb906e92a2c2b",
     "/site/js/sb-admin.js": "/site/js/sb-admin.js?id=9ce0f6b1d7f627f711b1c0d54591f4c9",
-    "/site/js/chart.js": "/site/js/chart.js?id=b30f92bf17653dd322dbdea51af12c63",
-    "/site/js/grafico/chart-area-demo.js": "/site/js/grafico/chart-area-demo.js?id=b7e598f7ebf1ce9159bb1854b31a0519",
-    "/site/js/grafico/chart-pie-demo.js": "/site/js/grafico/chart-pie-demo.js?id=d72257311ef3935a13d0e9bdfdf6b412"
+    "/site/js/chart.js": "/site/js/chart.js?id=b30f92bf17653dd322dbdea51af12c63"
 }
